PM-1170- Some fixes
